--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
 
     <h1 id="title">freeCodeCamp Survey Form</h1>
     <p id="description">Thank you for taking the time to help us improve the platform</p>
+    
+    <form id="survey-form">
+      <input type="text" id="name" placeholder="Enter your name.." required>
+
+    </form>
+    
     <script src="js/index.js"></script>
   </body>
 </html>
