added radio and label

--- a/index.html
+++ b/index.html
@@ -40,7 +40,15 @@
       <option>1</option>
       <option>2</option>
       <option>3</option>
-    </select>
+    </select><br>
+
+    <label><input type="radio" name="name" value="1" /> 1</label><br>
+
+    <label><input type="radio" name="name" value="2" />2</label><br>
+
+    <label><input type="radio" name="name" value="3" />3</label><br>
+
+
 
     </form>
     
