Checkboxes and textarea

--- a/index.html
+++ b/index.html
@@ -48,7 +48,15 @@
 
     <label><input type="radio" name="name" value="3" />3</label><br>
 
+    <section>
+    <label><input type="checkbox" name="name" value="1a" /> 1</label><br>
 
+    <label><input type="checkbox" name="name" value="2b" />2</label><br>
+
+    <label><input type="checkbox" name="name" value="3c" />3</label><br>
+    </section>
+
+    <textarea></textarea>
 
     </form>
     
